syntax = "proto3";

package abi;

message CommandRequest {
    oneof request_data {
        Hget hget = 1;
        Hmget hmget = 2;
        Hset hset = 3;
        Hmset hmset = 4;
        Hexists hexists = 5;
        Hmexists hmexists = 6;
        Hdelete hdelete = 7;
        Hmdelete hmdelete = 8;
        Hgetall hgetall = 9;
        Subscribe subscribe = 10;
        Unsubscribe unsubscribe = 11;
        Publish publish = 12;
    }
}

message CommandResponse {
    uint32 state_code = 1;
    string msg = 2;
    repeated Value values = 3;
    repeated KvPair pairs = 4;
    bool exit = 5;
}

message Hget {
    string table = 1;
    string key = 2;
}

message Hmget {
    string table = 1;
    repeated string keys = 2;
}

message Hset {
    string table = 1;
    KvPair pair = 2;
}

message Hmset {
    string table = 1;
    repeated KvPair pairs = 2;
}

message Hexists {
    string table = 1;
    string key = 2;
}

message Hmexists {
    string table = 1;
    repeated string keys = 2;
}

message Hdelete {
    string table = 1;
    string key = 2;
}

message Hmdelete {
    string table = 1;
    repeated string keys = 2;
}

message Hgetall {
    string table = 1;
}

message Subscribe {
    string topic = 1;
}

message Unsubscribe {
    string topic = 1;
    uint32 id = 2;
}

message Publish {
    string topic = 1;
    repeated Value data = 2;
}

message KvPair {
    string key = 1;
    Value value = 2;
}

message Value {
    oneof value {
        string string = 1;
        bytes binary = 2;
        int64 integer = 3;
        double float = 4;
        bool bool = 5;
    }
}